:art: Use constant message